--- a/Assemblies/Assemblies.csproj
+++ b/Assemblies/Assemblies.csproj
@@ -95,6 +95,15 @@
     <Compile Include="IAgentBL.cs" />
     <Compile Include="AgentBL.cs" />
     <Compile Include="Identity.cs" />
+    <Compile Include="Migrations\201607241330353_InitialMigration.cs" />
+    <Compile Include="Migrations\201607241330353_InitialMigration.Designer.cs">
+      <DependentUpon>201607241330353_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607241513274_AddAgencyIdtoAgent.cs" />
+    <Compile Include="Migrations\201607241513274_AddAgencyIdtoAgent.Designer.cs">
+      <DependentUpon>201607241513274_AddAgencyIdtoAgent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
@@ -107,6 +116,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201607241330353_InitialMigration.resx">
+      <DependentUpon>201607241330353_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607241513274_AddAgencyIdtoAgent.resx">
+      <DependentUpon>201607241513274_AddAgencyIdtoAgent.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
