--- a/Assemblies/Assemblies.csproj
+++ b/Assemblies/Assemblies.csproj
@@ -95,6 +95,10 @@
     <Compile Include="IAgentBL.cs" />
     <Compile Include="AgentBL.cs" />
     <Compile Include="Identity.cs" />
+    <Compile Include="Migrations\201607251249479_InitialMigration.cs" />
+    <Compile Include="Migrations\201607251249479_InitialMigration.Designer.cs">
+      <DependentUpon>201607251249479_InitialMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
@@ -108,6 +112,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201607251249479_InitialMigration.resx">
+      <DependentUpon>201607251249479_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
